--- a/deployment/ansible/roles/raster-foundry.base/defaults/main.yml
+++ b/deployment/ansible/roles/raster-foundry.base/defaults/main.yml
@@ -10,5 +10,5 @@ envdir_config:
   RF_CACHE_HOST: "{{ redis_host }}"
   RF_CACHE_PORT: "{{ redis_port }}"
   RF_AWS_SECRET: "{{ aws_secret }}"
-  RF_AWS_KEY: "{{ aws_key }}"
+  RF_PROFILE: "{{ aws_profile }}"
   RF_AWS_BUCKET: "{{ aws_bucket }}"
